# KlomboAGI

./: .env.example  .gitignore  AGI_LANDSCAPE_2026.md  ARCHITECTURE.md  ASSESSMENT_REPORT.md  COGNITIVE_ARCHITECTURES_RESEARCH.md  COMPETITORS_2025.md  EVALS.md  LICENSE  README.md  RESEARCH_2025.md  STORAGE.md  TRUTH.md  V0.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.py
brain_core/: Cargo.toml  README.md
brain_core/src/: learning.rs  lib.rs  plan_search.rs  retrieval.rs  scoring.rs  transfer.rs  types.rs
codeagi/action/: executor.py
codeagi/core/: daemon.py  loop.py
codeagi/evals/: execution_auditor.py
codeagi/interfaces/: cli.py
codeagi/learning/: episode_indexer.py  reflection.py  skill_evolution.py  skill_forge.py  skill_plugin.py
codeagi/llm/: __init__.py  provider.py
codeagi/reasoning/: critic.py  goal_refiner.py  planner.py
codeagi/safety/: policy.py
codeagi/storage/: manager.py  paths.py
datasets/: autonomous_history.json  trajectory.py
datasets/failure_cases/: anti_coding_fix_off_by_one_1774509009.json  anti_coding_fix_off_by_one_1774509375.json  anti_coding_fix_off_by_one_1774509593.json  anti_coding_fix_off_by_one_1774510046.json  anti_coding_fix_off_by_one_1774510622.json  anti_coding_fix_off_by_one_1774589482.json  anti_coding_fix_off_by_one_1774623896.json  anti_coding_write_flatten_1774509009.json  anti_coding_write_flatten_1774509375.json  anti_coding_write_flatten_1774509593.json  anti_coding_write_flatten_1774510046.json  anti_coding_write_flatten_1774510622.json  anti_coding_write_flatten_1774589482.json  anti_coding_write_flatten_1774623896.json  anti_data_find_outliers_1774509009.json  anti_data_find_outliers_1774509375.json  anti_data_find_outliers_1774509593.json  anti_data_find_outliers_1774510046.json  anti_data_find_outliers_1774510622.json  anti_data_find_outliers_1774589482.json  anti_data_find_outliers_1774623896.json  anti_ops_parse_logs_1774509009.json  anti_ops_parse_logs_1774509375.json  anti_ops_parse_logs_1774509593.json  anti_ops_parse_logs_1774510046.json  (+92 more)
deploy/: com.klomboagi.server.plist  install.sh  push.sh
docs/: claim-standard.md  definition.md  metrics.md  roadmap.md
evals/: harness.py  transfer_runner.py
klombo/: .gitignore  README.md  pyproject.toml
klombo/klombo/: __init__.py  benchmark.py  engine.py  fixtures.py  models.py  storage.py
klombo/tests/: test_engine.py
klomboagi/: __init__.py  __main__.py  brain_core.py  server.py  shell.py
scripts/: __init__.py  benchmark_brain_core.py  build_brain_core.py  nightly_eval_learn.py
tests/: test_abstraction.py  test_arc_solver.py  test_benchmark_brain_core.py  test_brain_core_bridge.py  test_build_brain_core.py  test_cli.py  test_cognition.py  test_cognition_loop.py  test_compute.py  test_conversation_quality.py  test_core_reasoner.py  test_critic.py  test_daemon.py  test_doctor.py  test_engine.py  test_episode_indexer.py  test_eval_cli.py  test_execution_auditor.py  test_executor.py  test_genesis.py  test_goal_refiner.py  test_hardware.py  test_llm.py  test_memory_behavior.py  test_missions.py  test_nightly_eval_learn.py  test_planner.py  test_policy.py  test_reasoning_core.py  test_relations.py  test_repo_runner.py  test_resumption.py  test_safety_policy.py  test_server.py  test_seven_pillars.py  test_skill_evolution.py  test_skill_forge.py  test_skill_plugin.py  test_storage.py  test_system_control.py  (+3 more)
(+1776 files in other folders)
