[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codeagi"
version = "0.1.0"
description = "Autonomous cognition runtime for persistent agent research"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ascendral", email = "dev@ascendral.io" }]
license = { text = "BSL-1.1" }
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
codeagi = "codeagi.interfaces.cli:main"

[project.urls]
Homepage = "https://github.com/Ascendral/codeagi"
Repository = "https://github.com/Ascendral/codeagi"
Issues = "https://github.com/Ascendral/codeagi/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["codeagi*"]
