[package]
name = "brain_core"
version = "0.1.0"
edition = "2021"
description = "Fast, deterministic cognition kernel for KlomboAGI"

[lib]
name = "brain_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
